fix: overlapp issue in overview next-step-button

--- a/index.css
+++ b/index.css
@@ -123,6 +123,7 @@ body {
   color: #333;
   font-size: 1.25rem;
   margin-bottom: 1rem;
+  padding-right: 7rem;
 }
 
 .overview-wrapper .overview-section.current .overview-next-button {
