--- a/scss/components/_overview.scss
+++ b/scss/components/_overview.scss
@@ -57,6 +57,7 @@
       color: $gray-darker;
       font-size: 1.25rem;
       margin-bottom: 1rem;
+      padding-right: 7rem;
     }
     
     .overview-next-button {
